cloudformation/child-templates/security-group.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  EnvironmentName:
    Type: String

Resources:

  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS from the internet to ALB
      VpcId: !Ref VPC
  
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-alb-sg"

  FrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for frontend service
      VpcId: !Ref VPC
  
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref AlbSecurityGroup
  
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-frontend-sg"

  ApiSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for API service
      VpcId: !Ref VPC
  
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          SourceSecurityGroupId: !Ref AlbSecurityGroup
  
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-api-sg"

  WorkerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for worker service
      VpcId: !Ref VPC
  
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-worker-sg"

Outputs:
  AlbSecurityGroupId:
    Value: !Ref AlbSecurityGroup

  FrontendSecurityGroupId:
    Value: !Ref FrontendSecurityGroup

  ApiSecurityGroupId:
    Value: !Ref ApiSecurityGroup

  WorkerSecurityGroupId:
    Value: !Ref WorkerSecurityGroup
